# lightshot-scraper

./: .gitignore  main.py  pyproject.toml  requirements.txt  run.py
