[tool.poetry]
name = "lightshot-scraper"
version = "0.1.0"
description = ""
authors = ["Cyberego <cy8erego@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
configobj = "5.0.6"
requests = "2.22.0"
beautifulsoup4 = "^4.8.1"
user-agent = "0.1.9"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
